| Priyanshu | enable odiya for localisation

--- a/locales/or.json
+++ b/locales/or.json
@@ -1,13 +1,13 @@
 {
 	"Language": "ଓଡିଆ",
 	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
-	"Know More": "ଅଧିକ ଜାଣନ୍ତୁ",
+	"Know More": "ଅଧିକ ଜାଣନ୍ତୁ।",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
 	"Select language": "ଏକ ଭାଷାକୁ ବାଛନ୍ତୁ",
 	"START RECORDING": "ରେକର୍ଡ଼ କରିବା ଆରମ୍ଭ କରନ୍ତୁ",
-	"We rely on your contributions": "ଆମେ ଆପଣଙ୍କର ଅବଦାନ ଉପରେ ନିର୍ଭର କରୁଛୁ",
+	"We rely on your contributions": "ଆମେ ଆପଣଙ୍କ ଅବଦାନ ଉପରେ ନିର୍ଭର କରୁଛୁ",
 	"For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.": "For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.",
-	"speakers contributed": "ପ୍ରଦାନ କରିଥିବା ବକ୍ତା",
+	"speakers contributed": "ପପ୍ରଦାନ କରିଥିବା ବକ୍ତା",
 	"Speaker Diversification": "Speaker Diversification",
 	"Show details": "Show details",
 	"START RECORDING IN": "START RECORDING IN",
@@ -42,9 +42,9 @@
 	"Open sourcing the speech recognition technology empowers us to bring our languages to the core of our fundamentals": "Open sourcing the speech recognition technology empowers us to bring our languages to the core of our fundamentals",
 	"Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.": "Vakyansh aims to open source the speech recognition models in various languages, the datasets collected through various channels and the linguistic utilities developed to process and clean the data and make it usable by speech recognition tools.",
 	"The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "The open source strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.",
-	"Crowd Sourcing & your contribution": "କ୍ରାଉଡସୋସିଂ ଓ ଆପଣଙ୍କର ଅବଦାନ",
+	"Crowd Sourcing & your contribution": "କ୍ରାଉଡ ସୋର୍ସିଂ ଏବଂ ଆପଣଙ୍କର ଅବଦାନ",
 	"This is where you come in.": "ଏଠାକୁ ଆପଣ ଆସନ୍ତି",
-	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "ଆପଣଙ୍କର ଅବଦାନର ପ୍ରତ୍ୟେକ ମିନିଟ୍ ଏକ ବୃହତ୍ ପାର୍ଥକ୍ୟ ଆଣିବ ଏବଂ ଆମକୁ ଆମର ଉଦ୍ଦେଶ୍ୟର ନିକଟତର କରାଇବ।",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "ଆପଣ ଅବଦାନର ପ୍ରତ୍ୟେକ ମିନିଟ୍ ଏକ ବିରାଟ ପରିବର୍ତ୍ତନ ଆଣିବ ଏବଂ ଆମକୁ ଆମର ଉଦ୍ଦେଶ୍ୟର ନିକଟତର କରାଇପାରିବ।",
 	"ABOUT THE ORGANISATION": "ଅନୁଷ୍ଠାନ ସମ୍ବନ୍ଧରେ",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ଏକଷ୍ଟେପ  ଫାଉଣ୍ଡେସନ ପାର୍ଟନରମାନଙ୍କୁ ଏକତ୍ରିତ କରେ ଏବଂ ଜଟିଳ ସାମାଜିକ ସମସ୍ୟାର ସମାଧାନ ପାଇଁ ଖୋଲା ଭିତ୍ତିଭୂମି, ଉପକରଣ ଏବଂ ଢାଞ୍ଚା ପ୍ରସ୍ତୁତ କରେ।  ଆମେ ସନବର୍ଡ ନାମକ ସୃଷ୍ଟି କରିଥିବା ଓପନ୍ ସୋର୍ସ ଡିଜିଟାଲ୍ ଭିତ୍ତିଭୂମିକୁ ବ୍ୟବହାର କରିଥାଉ ଏବଂ ସୋସାଇଟାଲ୍‌ ପ୍ଲାଟଫର୍ମ ଆପ୍ରୋଚ ଚିନ୍ତାଧାରା ମାଧ୍ୟମରେ ଏହା କରିଥାଉ |",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ଏକଷ୍ଟେପ ହେଉଛି ଏକ ଅଣଲାଭଦାୟକ ଅନୁଷ୍ଠାନ। ଏହାକୁା ରୋହିନି ଓ ନନ୍ଦନ ନିଲେକାନି ଓ ଶଙ୍କର ମାରୁୱାଡ଼ାଙ୍କ ଦ୍ବାରା ପ୍ରତିଷ୍ଠା କରାଯାଇଛି।",
@@ -79,16 +79,16 @@
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ରେକର୍ଡ଼ିଂ ପୂର୍ବରୁ ଏହାକୁ ବଡ଼ ପାଟିରେ ପଢ଼ି ପ୍ରମ୍ପଟ ହେଉଥିବା ଟେକ୍ସଟ ସହିତ ନିଜକୁ ପରିଚିତ କରାଇ ନିଅନ୍ତୁ।",
 	"Get started by clicking on <b>Record</b> button": "<b>ରେକର୍ଡ</b> ବଟନକୁ ଚିପି ଆରମ୍ଭ କରନ୍ତୁ",
 	"Say": "କୁହନ୍ତୁ ",
-	"Contribute Your Voice": "ଆପଣଙ୍କର ସ୍ବର ଦିଅନ୍ତୁ",
-	"Contribute your voice to create an open data repository of Indian languages": "ଭାରତୀୟ ଭାଷାର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବା ପାଇଁ ଆପଣଙ୍କର ସ୍ୱରକୁ ପ୍ରଦାନ କରନ୍ତୁ।",
-	"Listen": "ଶୁଣନ୍ତୁ ",
+	"Contribute Your Voice": "ଆପଣଙ୍କର ସ୍ୱର ଦିଅନ୍ତୁ",
+	"Contribute your voice to create an open data repository of Indian languages": "ଭାରତୀୟ ଭାଷାର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବା ପାଇଁ ଆପଣଙ୍କର ସ୍ୱର ପ୍ରଦାନ କରନ୍ତୁ।",
+	"Listen": "ଶୁଣନ୍ତୁ",
 	"Verify What They Say": "ସେମାନେ ଯାହା କହୁଛନ୍ତି ତାହାକୁ ବୈଧ କରନ୍ତୁ",
 	"Help us by validating the voice samples that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ।",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ଆପଣଙ୍କର ପସନ୍ଦର ଭାଷାକୁ ବାଛନ୍ତୁ",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"languages contributed": "ପ୍ରଦାନ କରିଥିବା ଭାଷା",
-	"hours recorded": "ରେକର୍ଡ଼ ହୋଇଥିବା ଗଣ୍ଟା",
+	"languages contributed": "ପ୍ରଦାନ କରାଯାଇଥିବା ଭାଷା",
+	"hours recorded": "ରେକର୍ଡ ହୋଇଥିବା ଘଣ୍ଟା",
 	"Instructions": "ନିର୍ଦ୍ଦେଶାବଳୀ",
 	"Play": "ପ୍ଲେ",
 	"Thank you for your enthusiasm to validate the voice samples": "ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାକୁ ଆପଣଙ୍କର ଉତ୍ସାହ ପାଇଁ ଧନ୍ୟବାଦ।",
@@ -104,17 +104,17 @@
 	"Select the language for contribution": "ଆପଣଙ୍କର ପ୍ରଦାନର ଭାଷାକୁ ବାଛନ୍ତୁ",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "ବ୍ୟାକାଂଶ : ଭାରତୀୟ ଭାଷା ପାଇଁ ଏକ କ୍ରାଉଡସୋର୍ସିଂ ପଦକ୍ଷେପ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ଭାରତୀୟ ଭାଷାରେ ଭାଷା ସ୍ୱୀକୃତି ମଡେଲଗୁଡିକର ବିକାଶ ପାଇଁ, ବିବିଧ ଭାରତୀୟ ସ୍ୱରର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟର ଆବଶ୍ୟକତା ରହିଛି। ବାକ୍ୟାଂଶ ଆପଣଙ୍କୁ ଭାରତୀୟ ସ୍ୱରର ଏକ ବିବିଧ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବାକୁ ଆପଣଙ୍କ ସ୍ୱରରେ ଯୋଗଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛି।",
-	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "ଭାଷା ସ୍ୱୀକୃତି ମଡେଲ ଗଠନ କରିବାର ମୁଖ୍ୟ ବିଷୟ, ତଥ୍ୟର ବିବିଧତା ମଧ୍ୟରେ ଅଛି ଯାହାକି ଆପଣ ରାଜ୍ୟ, ଉପଭାଷା, ଉଚ୍ଚାରଣ, ଲିଙ୍ଗ ଏବଂ ବୟସ ଶ୍ରେଣୀକୁ ନେଇ ପ୍ରଦାନ କରିଥାନ୍ତି । ସମଗ୍ର ଦେଶରେ ଏହି ବିବିଧତା ଆକାର ଆମ ଭାଷାକୁ ସଶକ୍ତ କରିବାରେ ଆମକୁ ସାମୂହିକ ଶକ୍ତି ପ୍ରଦାନ କରେ।",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "ଭାଷା ସ୍ୱୀକୃତି ମଡେଲ ଗଠନ କରିବାର ମୁଖ୍ୟ ବିଷୟ, ତଥ୍ୟର ବିବିଧତା ମଧ୍ୟରେ ଅଛି ଯାହାକି ଆପଣ ରାଜ୍ୟ, ଉପଭାଷା, ଉଚ୍ଚାରଣ, ଲିଙ୍ଗ ଏବଂ ବୟସ ଶ୍ରେଣୀକୁ ନେଇ ପ୍ରଦାନ କରଥାନ୍ତି। ସମଗ୍ର ଦେଶରେ ଏହି ବିବିଧତାର ଆକାର, ଆମ ଭାଷାକୁ ସଶକ୍ତ କରିବାରେ ଆମକୁ ସାମୂହିକ ଶକ୍ତି ପ୍ରଦାନ କରେ।",
 	"Top Languages": "ଶୀର୍ଷ ଭାଷାସମୂହ",
 	"By hours of data contributed": "ପ୍ରଦାନ କରାଯାଇଥିବା ଡାଟାର ଘଣ୍ଟା",
 	"By number of speakers": "ବକ୍ତାଙ୍କର ସଂଖ୍ୟା",
-	"VIEW ALL DETAILS": "ସମସ୍ତ ସବିଶେଷକୁ ଦେଖନ୍ତୁ",
+	"VIEW ALL DETAILS": "ସମସ୍ତ ବିବରଣୀ ଦେଖନ୍ତୁ",
 	"Select Age Group": "ବୟସ ଗ୍ରୁପ ବାଛନ୍ତୁ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Show All": "ସବୁକୁ ଦେଖାନ୍ତୁ",
+	"Show All": "ସବୁ ଦେଖାନ୍ତୁ",
 	"Enter preferred username": "ପସନ୍ଦର ୟୁଜରନେମ ଏଣ୍ଟର କରନ୍ତୁ",
 	"Username cannot be more than 12 characters": "ୟୁଜରନେମ 12 ଟି କ୍ୟାରେକ୍ଟରରୁ ଅଧିକ ହେବ ନାହିଁ",
-	"Data Last Updated": "ଶେଷରେ ଅପଡେଟ୍ ହୋଇଥିବା ତାରିଖ",
+	"Data Last Updated": "ଶେଷରେ ଅପ୍\u200Cଡେଟ ହୋଇଥିବା ତାରିଖ",
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା କୌଶଳ ବିଭିନ୍ନ ଭାଷା ସମ୍ପ୍ରଦାୟ, ବ୍ୟକ୍ତିବିଶେଷ ଏବଂ ବୈଷୟିକବିତ୍, ଯେଉଁମାନେ ସେମାନଙ୍କର ଭାଷା ପ୍ରତି ଆଗ୍ରହୀ, ଭାଷା ସ୍ୱୀକୃତି ପ୍ରୟୋଗଗୁଡ଼ିକର ବିକାଶ ଏବଂ ସମ୍ପ୍ରଦାୟର ଉନ୍ନତି ପାଇଁ ସେମାନଙ୍କୁ ବିଭିନ୍ନ ଡୋମେନରେ ସମନ୍ବିତ କରିବେ।",
 	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "ଯେହେତୁ ଇଣ୍ଟରନେଟ୍ ବ୍ୟବହାରକାରୀଙ୍କ ପରିମାଣ ଦିନକୁ ଦିନ ବଢ଼ିବାରେ ଲାଗିଛି ଏବଂ ଆର୍ଥିକ, ଶିକ୍ଷାଗତ ଏବଂ ଅର୍ଥନୈତିକ କାର୍ଯ୍ୟ ପାଇଁ ଡିଜିଟାଲ୍ ପ୍ଲାଟଫର୍ମ ପ୍ରବେଶର ଚାହିଦା ରହିଛି, ତେଣୁ ଏ କ୍ଷେତ୍ରରେ ପ୍ରଥମେ ଭାରତୀୟ ଭାଷା ଉପରେ ଚିନ୍ତା କରିବା ଆରମ୍ଭ କରିବାର ଆବଶ୍ୟକତା ଅଛି।",
 	"Winning back our languages by introducing localization in our ecosystem": "ଆମ ଇକୋସିଷ୍ଟମରେ ଲୋକାଲାଇଜେସନ୍ ଆରମ୍ଭ କରି ଆମର ଭାଷାଗୁଡ଼ିକରେ ଦକ୍ଷତା ହାସଲ କରିବା",
@@ -151,27 +151,27 @@
 	"Correct": "ଠିକ୍",
 	"Skip": "ଏଡାନ୍ତୁ",
 	"hours": "ଘଣ୍ଟା",
-	"minutes": "ମିନିଟ୍",
+	"minutes": "ମିନିଟ",
 	"seconds": "ସେକେଣ୍ଡ",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ହୋମ୍ ପେଜକୁ ଯିବା ପାଇଁ ଏଠାରେ <a class=\"\" href=\"/\"> ଉପରେ କ୍ଲିକ କରନ୍ତୁ।</a>",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ଭାଷା ସ୍ବୀକୃତି \"ମେସିନ୍ ଲର୍ଣ୍ଣିଂ\" ଟେକ୍‌ନୋଲୋଜି ଉପରେ ନିର୍ଭର କରେ ଯେଉଁଥିରେ ବିଭିନ୍ନ ସ୍ବରରେ ଓ ଏଥିସହିତ ସଂପୃକ୍ତ ଟେକ୍ସଟର ଡାଟାସେଟର ବୃହତ୍ ସଂଗ୍ରହ ରହିଛି । ବାକ୍ୟାଂଶ ଜରିଆରେ, ଆମେ ",
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ଏକ ଟିମ ଭାବରେ ଏହି ପଦକ୍ଷେପ ପାଇଁ ଆମେ ଆପଣଙ୍କୁ ଆମ ସହିତ ସାମିଲ୍ ହୋଇ ଆପଣଙ୍କର ସ୍ବର ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛୁ। ଗୋଟିଏ ଥରରେ ସ୍ବରକୁ ରେକର୍ଡ କରିବା ହୁଏତ କଷ୍ଟକର ହୋଇପାରେ ସେଥିପାଇଁ ଆମେ ୱେବସାଇଟରେ ଆପଣଙ୍କ ପାଇଁ ଲର୍ଣ୍ଣର ପଦକ୍ଷେପ ସୃଷ୍ଟି କରିଛୁ ଯଦ୍ବାରା ଆପଣ ଅନେକ ଥର ପରିଦର୍ଶନ କରିପାରିବେ ଓ ଯେଉଁଠାରୁ ଛାଡ଼ି ଥିଲେ ସେହିଠାରୁ ଆରମ୍ଭ କରିପାରିବେ। ",
 	"<b>Read once</b> before recording it": "ରେକର୍ଡ଼ କରିବା ପୂର୍ବରୁ ଥରେ ପଢ଼ି ନିଅନ୍ତୁ",
-	"Feedback": "Feedback",
+	"Feedback": "ମତାମତ",
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡ଼ିଂକୁ ଭାଲିଡେଟ୍ କରିଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ଆଗକୁ ବଢ଼ିବା ସହିତ ଆପଣ <a href=\"/terms-and-conditions\">ସର୍ତ୍ତ ଓ ବ୍ୟବସ୍ଥାବଳୀ</a> ସହିତ ସହମତ ଅଟନ୍ତି",
 	"Test your Microphone and Speakers": "ଆପଣଙ୍କର ମାଇକ୍ରୋଫୋନ୍ ଓ ସ୍ପିକର ଯାଞ୍ଚ କରନ୍ତୁ",
 	"Test Mic": "ମାଇକ୍ ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
-	"Recording for 5 seconds": "Recording for 5 seconds",
-	"Recording for 4 seconds": "Recording for 4 seconds",
-	"Recording for 3 seconds": "Recording for 3 seconds",
-	"Recording for 2 seconds": "Recording for 2 seconds",
-	"Recording for 1 seconds": "Recording for 1 second",
-	"Playingback Audio": "Playingback Audio",
+	"Recording for 5 seconds": "5 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
+	"Recording for 4 seconds": "4 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
+	"Recording for 3 seconds": "3 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
+	"Recording for 2 seconds": "2 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
+	"Recording for 1 seconds": "1 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
+	"Playingback Audio": "ଅଡିଓକୁ ଆଉଥରେ ପ୍ଳେ କରିବା",
 	"Playing": "ପ୍ଲେ ହେଉଛି",
-	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ",
-	"Quick Tips": "କୁଇକ୍ ଟିପ୍\u200Cସ",
+	"Help your own language": "ନିଜ ଭାଷାକୁ ସାହାଯ୍ୟ କର",
+	"Quick Tips": "କୁଇକ୍ ଟିପ୍‌ସ",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
@@ -184,5 +184,25 @@
 	"Data recorded for": "Data recorded for",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "ଆପଣଙ୍କର ଭାଷାକୁ  100 ଘଣ୍ଟାର ଲକ୍ଷ୍ୟ ହାସଲ କରିବାରେ ସହାୟତା କରନ୍ତୁ। ଆମେ ଜାଣୁ ଆପଣ ଅଧିକ କରିପାରିବେ!",
 	"Please test your <b>speakers</b>": "ଦୟାକରି ଆପଣଙ୍କର <b>ସ୍ପିକରକୁ</b> ଚେକ କରନ୍ତୁ",
-	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
+	"Congratulations!!! You have completed this batch of sentences": "ଅଭିନନ୍ଦନ !!! ଆପଣ ଏହି ବାକ୍ୟର ବ୍ୟାଚ୍ ସମାପ୍ତ କରିଛନ୍ତି।",
+	"social sharing text with rank": "ମୁଁ http://boloindia.nplt.in ରେ ଭାରତ ପାଇଁ ଉନ୍ମୁକ୍ତ ଭାଷା ସଂଗ୍ରହାଳୟ ନିର୍ମାଣ ଦିଗରେ ସହଯୋଗ କରିଛି। ଆପଣ ଏବଂ ମୁଁ ଆମର ସ୍ୱର ପ୍ରଦାନ କରି ଏକ ପାର୍ଥକ୍ୟ ସୃଷ୍ଟିକରିବା ଯାହା ମେସିନକୁ ଆମ ଭାଷା ବୁଝିବାରେ ସହାୟକ ହେବ। ଆମର %language ଭାଷା ବୋଲୋ ଇଣ୍ଡିଆରେ %rank ସ୍ଥାନ ପାଇଛି | ଆପଣ ଆପଣଙ୍କ ବିଟ୍ ଏବଂ ଭାଷାକୁ ସଶକ୍ତ କରିବାକୁ ଚାହାନ୍ତି କି?",
+	"social sharing text without rank": "ମୁଁ http://boloindia.nplt.in ରେ ଭାରତ ପାଇଁ ଉନ୍ମୁକ୍ତ ଭାଷା ସଂଗ୍ରହାଳୟ ନିର୍ମାଣ ଦିଗରେ ସହଯୋଗ କରିଛି। ଆପଣ ଏବଂ ମୁଁ ଆମର ସ୍ୱର ପ୍ରଦାନ କରି ଏକ ପାର୍ଥକ୍ୟ ସୃଷ୍ଟିକରିବା ଯାହା ମେସିନକୁ ଆମ ଭାଷା ବୁଝିବାରେ ସହାୟକ ହେବ। ଆପଣ ଆପଣଙ୍କ ବିଟ୍ ଏବଂ ଭାଷାକୁ ସଶକ୍ତ କରିବାକୁ ଚାହାନ୍ତି କି?",
+	"Select the language for voluntary contribution": "ସ୍ୱେଚ୍ଛାକୃତ ପ୍ରଦାନ  ପାଇଁ ଭାଷା ଚୟନ କରନ୍ତୁ",
+	"Speak": "କୁହନ୍ତୁ",
+	"Validate What They Say": "ସେମାନେ ଯାହା କହୁଛନ୍ତି ତାହାକୁ ବୈଧ କରନ୍ତୁ",
+	"Help us by validating the recordings that others have contributed": "ଅନ୍ୟମାନେ ପ୍ରଦାନ କରିଥିବା ସ୍ୱର ନମୁନାକୁ ବୈଧ କରିବାରେ ଆମକୁ ସାହାଯ୍ୟ କରନ୍ତୁ।",
+	"Bolo India: A crowdsourcing initiative for Indian languages": "ବୋଲୋ ଇଣ୍ଡିଆ: ଭାରତୀୟ ଭାଷା ପାଇଁ ଏକ କ୍ରାଉଡ ସୋର୍ସିଂ ପଦକ୍ଷେପ",
+	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "ଭାରତୀୟ ଭାଷାରେ ସ୍ୱୀକୃତି ମଡେଲଗୁଡ଼ିକର ବିକାଶ ପାଇଁ, ବିବିଧ ଭାରତୀୟ ସ୍ୱରର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟର ଆବଶ୍ୟକତା ରହିଛି। ବୋଲୋ ଇଣ୍ଡିଆ ଆପଣଙ୍କୁ ଭାରତୀୟ ସ୍ୱରର ଏକ ବିବିଧ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବାକୁ ଆପଣଙ୍କ ସ୍ୱରରେ ଯୋଗଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛି।",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ଭାରତୀୟ ଭାଷା ସ୍ୱୀକୃତି କ୍ଷେତ୍ରରେ ଭାରତ ଆତ୍ମନିର୍ଭର ହେବା ଆବଶ୍ୟକ। ତେଣୁ, ଆମେ ବିବିଧ ଭାରତୀୟ ସ୍ୱରର ଏକ ଉନ୍ମୁକ୍ତ ଡାଟା ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବାକୁ ଚାହୁଁ । ଜାତୀୟ ଭାଷା ଅନୁବାଦ ମିଶନ୍ (NLTM) ଅଧୀନରେ ଭାରତ ସରକାରଙ୍କ MeitY ଙ୍କ ଏହା ଏକ ପ୍ରୟାସ । ଏହି ପ୍ରୟାସକୁ ଏକ ପ୍ରୋ-ବୋନୋ ଭିତ୍ତିରେ EkStep ଫାଉଣ୍ଡେସନ୍ ଦ୍ୱାରା ସମର୍ଥିତ ଏବଂ ଅନ୍ୟାନ୍ୟ ମୁକ୍ତ ଉତ୍ସ ଫ୍ରେମୱାର୍କ ସହିତ <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> ଅଧୀନରେ ଏହାର ମୁକ୍ତ ଉତ୍ସ କାର୍ଯ୍ୟକୁ ବ୍ୟବହାର କରିଥାଏ ।",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "ଏହି କାରଣରୁ ବୋଲୋ ଇଣ୍ଡିଆ ଆପଣଙ୍କ ସ୍ୱରକୁ ସ୍ୱେଚ୍ଛାକୃତ ଭାବରେ ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛି। ଆପଣଙ୍କର ସମସ୍ତ ଅବଦାନ ସ୍ୱୟଂଚାଳିତ ଭାବରେ ପ୍ରକ୍ରିୟାକରଣ ହୁଏ ଏବଂ ସମ୍ପ୍ରଦାୟ ପାଇଁ ଏକ ଉପଯୋଗୀ ଉନ୍ମୁକ୍ତ ତଥ୍ୟ ଭାବରେ ଉପଲବ୍ଧ ହୁଏ । ଏହିପରି ତଥ୍ୟ ବିଶ୍ୱସ୍ତରରେ ଭାଷା ସ୍ୱୀକୃତି ପ୍ରୟୋଗର ବିକାଶ ପାଇଁ ସମସ୍ତ ଭାଷା ଉତ୍ସାହୀ ଏବଂ ବୈଷୟିକବିତ୍\u200Cଙ୍କ ଦ୍ୱାରା ବ୍ୟବହାର କରାଯାଇପାରିବ।",
+	"India is a land of many languages, our digital strategy must reflect it.": "ଭାରତ ଅନେକ ଭାଷାର ଦେଶ, ଆମର ଡିଜିଟାଲ ରଣନୀତି ଏହାକୁ ପ୍ରତିଫଳିତ କରିବା ଜରୁରୀ।",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "ଭାରତର ୯୦% ଜନସଂଖ୍ୟା ସେମାନଙ୍କର ଦୈନନ୍ଦିନ କାର୍ଯ୍ୟକଳାପ ପାଇଁ ଆଞ୍ଚଳିକ ଭାଷା ବ୍ୟବହାର କରନ୍ତି।",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ଆର୍ଥିକ, ଶିକ୍ଷାଗତ ତଥା ସାମାଜିକ କାର୍ଯ୍ୟକଳାପ ପାଇଁ ଅଧିକରୁ ଅଧିକ ଲୋକ ଡିଜିଟାଲ୍ ପ୍ଲାଟଫର୍ମ ବ୍ୟବହାର କରୁଥିବାରୁ ଡିଜିଟାଲ୍ ପ୍ଲାଟଫର୍ମଗୁଡିକ ଭାରତୀୟ ଭାଷାରେ ନିରବଚ୍ଛିନ୍ନ ଭାବରେ କାର୍ଯ୍ୟ କରିବା ଆବଶ୍ୟକ।",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "ଆମକୁ ଭାଷା ପ୍ରଯୁକ୍ତିବିଦ୍ୟା ନିର୍ମାଣ କରିବାକୁ ପଡିବ ଯାହା ତୁମର ଭାଷା ପାଇଁ ପ୍ରସ୍ତୁତ। ଏହାର ସଠିକତା ରହିବା ଆବଶ୍ୟକ ଏବଂ ଆପଣଙ୍କ ଭାଷାରେ ଲୋକଙ୍କ ଦୈନନ୍ଦିନ ଭାଷା ଏବଂ ଯୋଗାଯୋଗ ବୁଝିବା ଜରୁରୀ।",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "ଆପଣଙ୍କ ଭାଷାରେ ଉନ୍ମୁକ୍ତ ବିଶ୍ୱସ୍ତରୀୟ ଭାଷା ସ୍ୱୀକୃତି ଆପଣଙ୍କ ଭାଷାରେ ଏକ ଡିଜିଟାଲ୍ ପ୍ରଥମ ମଡେଲକୁ ବିଭିନ୍ନ କ୍ଷେତ୍ରରେ ଯଥା ଶିକ୍ଷା, ସ୍ୱାସ୍ଥ୍ୟସେବା ଏବଂ ମିଡିଆରେ ସକ୍ଷମ କରିବ।",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "ଆପଣଙ୍କ ଭାଷାରେ ବିକଶିତ ହେବାକୁ ପ୍ରସ୍ତାବିତ ଉପକରଣ, ଉପଯୋଗୀତା ଏବଂ ମଡେଲଗୁଡିକ ବୋଲୋ ଇଣ୍ଡିଆ କ୍ରାଉଡ ସୋର୍ସିଂ ପ୍ଲାଟଫର୍ମ ମାଧ୍ୟମରେ ମୁକ୍ତ ଉତ୍ସ ଅବଦାନ ଉପରେ ନିର୍ଭର କରିବ।",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ଭାଷା ସ୍ୱୀକୃତ “ମେସିନ୍-ଲର୍ଣ୍ଣି” ବୈଷୟିକି ଉପରେ ନିର୍ଭର କରେ ଯାହା ବୃହତ ଡାଟାସେଟ ଆବଶ୍ୟକ କରେ ଯେଉଁଥିରେ ବିଭିନ୍ନ ଆଇଭଏସ୍ ଏବଂ ଅନୁରୂପ ପାଠ୍ୟ ଅନ୍ତର୍ଭୁକ୍ତ । ବୋଲୋ ଇଣ୍ଡିଆ ମାଧ୍ୟମରେ, ଆମେ ଭାରତୀୟ ଭାଷା କହୁଥିବା ଭାରତୀୟ ସ୍ୱରର ଏକ ବିବିଧ ଉନ୍ମୁକ୍ତ ସଂଗ୍ରହାଳୟ ସୃଷ୍ଟି କରିବାକୁ ଚାହୁଁଛୁ ଯାହା ଏହି ପଦକ୍ଷେପ ପାଇଁ ବ୍ୟବହୃତ ହୋଇପାରିବ ।",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "ଆମେ ଆମ ସହିତ ଯୋଗଦେବାକୁ ଏବଂ ସୈଚ୍ଛାକୃତ ଭାବରେ ଆପଣଙ୍କ ସ୍ୱର ପ୍ରଦାନ କରିବାକୁ ଆମନ୍ତ୍ରଣ କରୁଛୁ। ଗୋଟିଏ ଷ୍ଟ୍ରେଚରେ ଆପଣଙ୍କ ସ୍ୱରକୁ ରେକର୍ଡିଂ କରିବା ହୁଏତ ଅଧିକ ମାତ୍ରାରେ ହୋଇପାରେ ତେଣୁ ଆପଣ ଏକାଧିକ ଥର ୱେବସାଇଟ୍ ପରିଦର୍ଶନ କରି ଏହା କରିପାରିବେ ଏବଂ ଆପଣ ଯେଉଁଠାରୁ ଆମକୁ ଛାଡିଛନ୍ତି ସେଠାରୁ ଆରମ୍ଭ କରିପାରିବେ ।",
+	"Select a language": "ଏକ ଭାଷା ଚୟନ କରନ୍ତୁ",
+	"START CONTRIBUTING": "ପ୍ରଦାନ ଆରମ୍ଭ କରନ୍ତୁ"
 }
