| Priyanshu | added localised text in badges-info.ejs

--- a/locales/en.json
+++ b/locales/en.json
@@ -269,6 +269,19 @@
 	"You can select the language in which you want to participate": "You can select the language in which you want to participate",
 	"You can change the language in which you want to read content": "You can change the language in which you want to read content",
 	"Click on the card to start contributing your voice": "Click on the card to start contributing your voice",
-	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken"
-
+	"Click on the card to validate what others have spoken":"Click on the card to validate what others have spoken",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"Bronze": "Bronze",
+	"Silver": "Silver",
+	"Gold": "Gold",
+	"Platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"Level 1": "Level 1",
+	"N/A": "N/A"
 }
