| Priyanshu | added localised text in badges-info.ejs

--- a/locales/en.json
+++ b/locales/en.json
@@ -259,5 +259,25 @@
 	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
 	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
-	"Back to Home": "Back to Home"
+	"Back to Home": "Back to Home",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"Bronze": "Bronze",
+	"Silver": "Silver",
+	"Gold": "Gold",
+	"Platinum": "Platinum",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"Level 1": "Level 1",
+	"N/A": "N/A",
+	"Level 2": "Level 2",
+	"Level 3": "Level 3",
+	"Level 4": "Level 4",
+	"Level 5": "Level 5",
+	"Level 6": "Level 6",
+	"<span class=\"level-count\"></span> Senetences": "<span class=\"level-count\"></span> Senetences"
 }
