|Ramu| Fix english share context, length of subject in feedback

--- a/locales/as.json
+++ b/locales/as.json
@@ -281,6 +281,5 @@
 	"Back to Home": "ঘৰলৈ উভতি যাওক",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "আপোনাৰ মতামতে বোলো ইণ্ডিয়াক প্ৰাসংগিক কৰি ৰখাত সহায় কৰে, মতামতৰ বাবে দিয়া সময়খিনিৰ বাবে আমি আপোনাক প্ৰশংসা কৰোঁ।",
 	"National Language Translation Mission": "ৰাষ্ট্ৰীয় ভাষা অনুবাদ মিছন",
-	"Badge ID": "বেজ পৰিচয় পত্ৰ",
-	"Download": "ডাউনলোড"
+	"Badge ID": "বেজ পৰিচয় পত্ৰ"
 }
