|Soujyo| Add kannad locales leftouts

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -1,6 +1,32 @@
 {
 	"hrs recorded in": "%language ನಲ್ಲಿ %hours ಗಂಟೆಗಳನ್ನು ದಾಖಲಿಸಲಾಗಿದೆ",
 	"hrs validated in": "%hours ಗಂಟೆಗಳ %language ನಲ್ಲಿ ಮೌಲ್ಯೀಕರಿಸಲಾಗಿದೆ",
+	"Konkani Roman":"ಕೊಂಕಣಿ ರೋಮನ್",
+	"Konkani DV":"ಕೊಂಕಣಿ ಡಿವಿ",
+	"Manipuri BN":"ಮಣಿಪುರಿ ಬಿಎನ್",
+	"Manipuri MM":"ಮಣಿಪುರಿ ಎಮ್ಎಮ್",
+	"Santali OL":"ಸಂತಾಲಿ ಒಎಲ್",
+	"Santali DV":"ಸಂತಾಲಿ ಡಿವಿ",
+	"English":"ಇಂಗ್ಲೀಷ್",
+	"ASSAMESE":"ಆಸಾಮೀಜ್",
+	"BENGALI":"ಬಂಗಾಲಿ",
+	"BODO":"ಬೋಡೋ",
+	"DOGRI":"ಡೋಗ್ರಿ / ಡೋಗರಿ",
+	"GUJARATI":"ಗುಜರಾತಿ",
+	"Hindi":"ಹಿಂದಿ",
+	"KANNADA":"ಕನ್ನಡ",
+	"KASHMIRI":"ಕಾಶ್ಮೀರಿ",
+	"MAITHILI":"ಮೈಥಿಲಿ",
+	"Malayalam":"ಮಲಯಾಳಂ",
+	"MARATHI":"ಮರಾಠಿ",
+	"ODIA":"ಉಡಿಯಾ",
+	"NEPALI":"ನೇಪಾಳಿ",
+	"PUNJABI":"ಪಂಜಾಬಿ",
+	"SANSKRIT":"ಸಂಸ್ಕೃತ",
+	"SINDHI":"ಸಿಂಧಿ",
+	"TAMIL":"ತಮಿಳ",
+	"Telugu":"ತೆಲುಗು",
+	"URDU":"ಉರ್ದು",
 	"hours": "ಗಂಟೆಗಳು",
 	"minutes": "ನಿಮಿಷಗಳು",
 	"seconds": "ಸೆಕಂಡುಗಳ",
