| Priyanshu | update translation for odia

--- a/locales/or.json
+++ b/locales/or.json
@@ -26,7 +26,7 @@
 	"Select Mother Tongue": "ମାତୃଭାଷା ଚୟନ କରନ୍ତୁ",
 	"Pick age range": "Pick age range",
 	"I have read and agree to the": "I have read and agree to the",
-	"Terms and Conditions": "Terms and Conditions",
+	"Terms and Conditions": "ସର୍ତ୍ତାବଳୀ",
 	"LET'S GO": "ଆସନ୍ତୁ ଯିବା",
 	"Hide details": "ସବିଶେଷକୁ ଲୁଚାନ୍ତୁ",
 	"Sign In": "Sign In",
@@ -142,8 +142,8 @@
 	"Gender Contribution": "ଲିଙ୍ଗ ଅବଦାନ",
 	"State Wise distribution": "ରାଜ୍ୟସ୍ତରୀୟ ବଣ୍ଟନ",
 	"Age Group Distribution": "ବୟସ ଗ୍ରୁପ ବଣ୍ଟନ",
-	"hrs recorded in": "%language ରେ %hours ଘଣ୍ଟା ରେକର୍ଡ଼ ହୋଇଛି",
-	"hrs validated in": "%language ରେ %hours ଘଣ୍ଟା ବୈଧ ହୋଇଛି",
+	"hrs recorded in": "%language ଘଣ୍ଟା %hours ରେ ରେକର୍ଡ ହୋଇଛି",
+	"hrs validated in": "%language ଘଣ୍ଟା %hours ରେ ବୈଧ ହୋଇଛି",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ସେକେଣ୍ଡ ପରେ ରେକର୍ଡିଂ ସ୍ୱୟଂଚାଳିତ ଭାବରେ ବନ୍ଦ ହୋଇଯିବ ",
 	"Incorrect": "ଭୁଲ",
 	"Replay": "ପୁନର୍ବାର ପ୍ଲେ କରନ୍ତୁ",
@@ -161,8 +161,8 @@
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ରେକର୍ଡ଼ିଂକୁ ଭାଲିଡେଟ୍ କରିଥିବାରୁ ଆପଣଙ୍କୁ ଧନ୍ୟବାଦ",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ଆଗକୁ ବଢ଼ିବା ସହିତ ଆପଣ <a href=\"/terms-and-conditions\">ସର୍ତ୍ତ ଓ ବ୍ୟବସ୍ଥାବଳୀ</a> ସହିତ ସହମତ ଅଟନ୍ତି",
 	"Test your Microphone and Speakers": "ଆପଣଙ୍କର ମାଇକ୍ରୋଫୋନ୍ ଏବଂ ସ୍ପିକର୍ ଯାଞ୍ଚ କରନ୍ତୁ",
-	"Test Mic": "ମାଇକ୍ ଟେଷ୍ଟ କରନ୍ତୁ",
-	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
+	"Test Mic": "ମାଇକ୍ ଯାଞ୍ଚ କରନ୍ତୁ",
+	"Test Speakers": "ସ୍ପିକର ଯାଞ୍ଚ କରନ୍ତୁ",
 	"Recording for 5 seconds": "5 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
 	"Recording for 4 seconds": "4 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
 	"Recording for 3 seconds": "3 ସେକେଣ୍ଡ ପାଇଁ ରେକର୍ଡିଂ",
