| Priyanshu | update translation for Tamil

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -9,13 +9,13 @@
 	"Language": "தமிழ்",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "எங்களை பற்றி",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Select the language for voluntary contribution": "தன்னார்வ பங்களிப்புக்கான மொழியைத் தேர்ந்தெடுக்கவும்",
 	"Show All": "அனைத்தையும் காட்டு",
 	"Speak": "சொல்லவும்",
 	"Contribute Your Voice": "உங்கள் குரலில் பங்களிக்கவும்",
 	"Contribute your voice to create an open data repository of Indian languages": "இந்திய மொழிகளின் திறந்த தரவு களஞ்சியத்தை உருவாக்க உங்கள் குரலில் பங்களிக்கவும்",
-	"Listen": "கேட்கவும்",
-	"Validate What They Say": "அவர்கள் சொல்வதை சரிபார்க்கவும்",
+	"Listen": "உறுதிப்படுத்தவும்",
+	"Validate What They Say": "சொல்லப்பட்டது தான் எழுதப்பட்டிருக்கிறது என",
 	"Help us by validating the recordings that others have contributed": "மற்றவர்கள் பங்களித்த குரல் மாதிரிகளை சரிபார்த்து எங்களுக்கு உதவுங்கள்",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "போலோ இந்தியா: இந்திய  மொழிகளுக்கான  மக்களின் கூட்டு பங்களிப்பு  முயற்சி",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "இந்திய மொழிகளில் பேச்சறிதல் பகுதியில்  இந்தியா தன்னிறைவை பெறுவது அவசியம். இதற்காக, இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தை நாங்கள் உருவாக்க விரும்புகிறோம். இந்த காரணத்திற்காக, உங்கள் குரலை தன்னார்வத்துடன் பங்களிப்பதற்காக போலோ இந்தியா உங்களை அழைக்கிறது",
@@ -71,8 +71,8 @@
 	"Get started by clicking on <b>Record</b> button": "பதிவு பொத்தானைக் கிளிக் செய்து தொடங்கவும்",
 	"Report": "புகாரளிக்கவும்",
 	"Test your Microphone and Speakers": "உங்கள் ஒலிவாங்கி மற்றும் ஒலிபெருக்கிகளை சோதிக்கவும்",
-	"Please speak clearly": "Please speak clearly",
-	"Low/No Background Noise": "Low/No Background Noise",
+	"Please speak clearly": "தெளிவாக பேசுக",
+	"Low/No Background Noise": "பின்னணி இரைச்சல் குறைவாக இருக்கு/இல்லை",
 	"Background Noise Detected": "பின்னணி இரைச்சல் கண்டறியப்பட்டது",
 	"Let's get started!": "Let's get started!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நின்றுவிடும்",
@@ -100,8 +100,8 @@
 	"Error!!!": "பிழை!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "உங்கள் வேண்டுகோளை நிறைவேற்ற முயன்ற போது எதிர்பாராத பிழை ஏற்பட்டது. சிறிது நேரம் கழித்து முயற்சிக்கவும்.",
 	"Close": "மூடு",
-	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "இந்திய மொழிகளில் பேச்சறிதல் பகுதியில்  இந்தியா தன்னிறைவை பெறுவது அவசியம். இதற்காக, இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தை நாங்கள் உருவாக்க விரும்புகிறோம். இந்த காரணத்திற்காக, உங்கள் குரலை தன்னார்வத்துடன் பங்களிப்பதற்காக போலோ இந்தியா உங்களை அழைக்கிறது",
-	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "इஇந்த திறந்த தரவை அனைத்து மொழி ஆர்வலர்கள் மற்றும் தொழில்நுட்ப வல்லுநர்கள் உலகத்தரம் வாய்ந்த பேச்சறிதல் பயன்பாடுகளை உருவாக்க பயன்படுத்தலாம்.",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "இந்திய மொழிகளில் பேச்சறிதல் பகுதியில்  இந்தியா தன்னிறைவை பெறுவது அவசியம். இதற்காக, இந்தியக் குரல்களின் திறந்த தரவு களஞ்சியத்தை நாங்கள் உருவாக்க விரும்புகிறோம். இது தேசிய மொழி மொழிபெயர்ப்பு மிஷனின் (என்.எல்.டி.எம்) கீழ் இந்திய அரசாங்கத்தின் மின்னணு மற்றும் தகவல் தொழில்நுட்ப அமைச்சகத்தின் முயற்சி ஆகும். இந்த முயற்சியை எக்ஸ்டெப் அறக்கட்டளை ஒரு புரோ போனோ அதாவது இலவச அடிப்படையில் ஆதரிக்கிறது மற்றும் அதன் திறந்த மூல வேலைகளை <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> இன் கீழ் பல்வேறு திறந்த மூல கட்டமைப்புகளுடன் பயன்படுத்துகிறது.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "இந்த காரணத்திற்காக, உங்கள் குரலை தன்னார்வத்துடன் பங்களிப்பதற்காக போலோ இந்தியா உங்களை அழைக்கிறது உங்கள் பங்களிப்புகள் அனைத்தும் தானாகவே செயலாக்கப்பட்டு திறந்த தரவாக சமூகத்திற்கு பயனுள்ள பாணியில் கிடைக்கின்றன. இதுபோன்ற தரவுகளை அனைத்து மொழி ஆர்வலர்கள் மற்றும் தொழில்நுட்ப வல்லுநர்களும் உலகத்தரம் வாய்ந்த பேச்சறிதல் பயன்பாடுகளை உருவாக்க பயன்படுத்தலாம்.",
 	"India is a land of many languages, our digital strategy must reflect it.": "இந்தியா பல மொழிகள் பேசப்படும் நாடு, நமது டிஜிட்டல் வியூகம் அதை பிரதிபலிக்க வேண்டும்.",
 	"90% of India's population uses region languages to conduct their day-to-day activities.": "இந்தியாவின் 90% மக்கள் தங்கள் அன்றாட நடவடிக்கைகளை செய்ய பிராந்திய மொழிகளைப் பயன்படுத்துகின்றனர்.",
 	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "நிதி, கல்வி மற்றும் சமூக நடவடிக்கைகளுக்காக டிஜிட்டல் தளங்களை பயன்படுத்துபவர்கள் அதிகமாக-அதிகமாக, டிஜிட்டல் தளங்கள் இந்திய மொழிகளில் தடையின்றி செயல்பட வேண்டும்.",
@@ -165,11 +165,14 @@
 	"Page Not Found": "தேடிய பக்கம் கிடைக்கவில்லை",
 	"Looks like you have taken a wrong turn here": "நீங்கள் இங்கே ஒரு தவறான திருப்பம் எடுத்தது போல தோன்றுகிறது",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "முகப்புப் பக்கத்துக்கு செல்ல இங்கே என்னும் <a class=\"\" href=\"/\">இடத்தில் சொடுக்கவும்</a>",
-	"Subject": "பொருள்",
+	"Subject": "தலைப்பு",
 	"Description": "விளக்கம்",
-	"Please type here...": "தயவுசெய்து இங்கே தட்டச்சு செய்க ...",
-	"Failed to submit the feedback. Please try again.": "கருத்தை சமர்ப்பிப்பதில் தோல்வி. தயவுசெய்து மீண்டும் முயற்சி செய்க.",
+	"Please type here...": "இங்கே தட்டச்சு செய்க",
+	"Failed to submit the feedback. Please try again.": "பின்னூட்டத்தை சமர்ப்பிப்பதில் மீண்டும் முயற்சி செய்க.",
 	"Thank You for your valuable feedback": "உங்கள் மதிப்புமிக்க பின்னூட்டத்திற்காக நன்றி",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "உங்கள் பின்னூட்டம் போலோ இந்தியாவை அர்த்தமுள்ளதாக வைத்திருக்க உதவுகிறது, பின்னூட்டத்தை வழங்க நேரம் ஒதுக்கிய உங்களை பாராட்டுகிறோம்.",
-	"Back to Home": "மீண்டும் முகப்புப் பக்கத்திற்கு"
+	"Back to Home": "மீண்டும் முகப்புப் பக்கத்திற்கு",
+	"National Language Translation Mission": "தேசிய மொழி மொழிபெயர்ப்பு மிஷன்",
+	"Badge ID": "பேட்ஜ் ஐடி",
+	"Download": "பதிவிறக்கவும்"
 }
