|Ramu| Add report in validation

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -229,5 +229,6 @@
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
 	"National Language Translation Mission": "नेशनल लैंग्वेज ट्रांसलेशन मिशन",
-	"Download": "डाउनलोड करें"
+	"Download": "डाउनलोड करें",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
 }
