|Sreejith + Niresh| Update tamil translation text for background noise

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -72,7 +72,7 @@
 	"Report": "புகாரளிக்கவும்",
 	"Test your Microphone and Speakers": "உங்கள் ஒலிவாங்கி மற்றும் ஒலிபெருக்கிகளை சோதிக்கவும்",
 	"Please speak clearly": "தெளிவாக பேசுக",
-	"Low/No Background Noise": "பின்னணி இரைச்சல் குறைவாக இருக்கு/இல்லை",
+	"Low/No Background Noise": "பின்னணி இரைச்சல் ஏற்றுக்கொள்ளக்கூடிய வரம்பில் உள்ளது",
 	"Background Noise Detected": "பின்னணி இரைச்சல் கண்டறியப்பட்டது",
 	"Let's get started!": "Let's get started!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> விநாடிகளுக்குப் பிறகு பதிவு தானாகவே நின்றுவிடும்",
