| Priyanshu | added missing translation for assamese

--- a/locales/en.json
+++ b/locales/en.json
@@ -260,5 +260,6 @@
 	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
 	"Back to Home": "Back to Home",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
