--- a/locales/hi.json
+++ b/locales/hi.json
@@ -230,5 +230,6 @@
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं",
 	"National Language Translation Mission": "नेशनल लैंग्वेज ट्रांसलेशन मिशन",
 	"Download": "डाउनलोड करें",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding"
 }
