--- a/locales/ml.json
+++ b/locales/ml.json
@@ -49,7 +49,7 @@
 	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "വികസിപ്പിക്കാൻ ഉദ്ദേശിക്കുന്ന സങ്കേതങ്ങൾ, യൂട്ടിലിറ്റികൾ, മാതൃകകൾ എന്നിവ വാക്യാംശ് ക്രൗഡ്‌ സോഴ്സിങ് പ്ലാറ്റ്‌ഫോമിലൂടെ നൽകുന്ന ഓപ്പൺ സോഴ്സ് സംഭാവനകളെയാണ് ആശ്രയിക്കുക.",
 	"Crowd Sourcing & your contribution": "ക്രൗഡ്‌‌ സോഴ്സിങും നിങ്ങളുടെ സംഭാവനയും",
 	"This is where you come in.": "ഇവിടെയാണ് നിങ്ങളുടെ പ്രാധാന്യം.",
-	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "നിങ്ങളുടെ സംഭാവനയുടെ ഓരോ നിമിഷവും വലിയ മാറ്റമുണ്ടാക്കുകയും ഞങ്ങളുടെ ലക്ഷ്യത്തിലേക്ക് ഞങ്ങളെ അടുപ്പിക്കുകയും ചെയ്യും.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "നിങ്ങൾ സംഭാവന നൽകുന്ന ഓരോ നിമിഷവും വലിയ തോതിൽ സഹായകരമാവും, അവ ഞങ്ങളെ ലക്ഷ്യത്തിലേക്ക് കൂടുതൽ അടുപ്പിക്കുകയും ചെയ്യും.",
 	"Select language": "ഭാഷ തിരഞ്ഞെടുക്കുക",
 	"START RECORDING": "റെക്കോർഡ് ചെയ്യാൻ തുടങ്ങാം",
 	"ABOUT THE ORGANISATION": "സ്ഥാപനത്തെ കുറിച്ച്",
@@ -128,8 +128,8 @@
 	"If you are unsure of the match, skip the particular voice sample": "പൊരുത്തപ്പെടുന്നുണ്ടോ എന്ന് ഉറപ്പില്ലെങ്കിൽ, ആ ശബ്ദ സാമ്പിൾ ഒഴിവാക്കുക",
 	"Username cannot be more than 12 characters": "യൂസർനെയിമിൽ 12 പ്രതീകങ്ങളിൽ കൂടുതൽ പാടില്ല",
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
-	"hrs recorded in": "മണിക്കൂറുകൾ രേഖപ്പെടുത്തിയിരിക്കുന്നു",
-	"hrs validated in": "മണിക്കൂറുകൾ വിലയിരുത്തപ്പെട്ടിരിക്കുന്നു",
+	"hrs recorded in": "",
+	"hrs validated in": "",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻ്റിന് ശേഷം റെക്കോർഡിംഗ് താനേ നിൽക്കും",
 	"Incorrect": "തെറ്റ്",
 	"Replay": "വീണ്ടും പ്ലേ ചെയ്യുക",
