--- a/locales/as.json
+++ b/locales/as.json
@@ -281,5 +281,21 @@
 	"Back to Home": "ঘৰলৈ উভতি যাওক",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "আপোনাৰ মতামতে বোলো ইণ্ডিয়াক প্ৰাসংগিক কৰি ৰখাত সহায় কৰে, মতামতৰ বাবে দিয়া সময়খিনিৰ বাবে আমি আপোনাক প্ৰশংসা কৰোঁ।",
 	"National Language Translation Mission": "ৰাষ্ট্ৰীয় ভাষা অনুবাদ মিছন",
-	"Badge ID": "বেজ পৰিচয় পত্ৰ"
+	"Badge ID": "বেজ পৰিচয় পত্ৰ",
+	"Levels and Badging @BoloIndia": "Levels and Badging @BoloIndia",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"Level 1": "Level 1",
+	"<span class=\"level-count\"></span> Senetences": "<span class=\"level-count\"></span> Senetences",
+	"N/A": "N/A",
+	"Level 2": "Level 2",
+	"Level 3": "Level 3",
+	"Level 4": "Level 4",
+	"Level 5": "Level 5",
+	"Level 6": "Level 6"
 }
